added an alt element to each photo with a clear discription for accessibility

--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="close up, bird view of working environment including coffee, open laptop, color pensils in a cup, a magnifying glass on bottom right of laptop, an open sharpie next to the opened spiral, open spiral with a couple titles including content, backlink, headings, link building, mobile campatibility, and social media. " class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="close up, childs view point of a portrait working environment inculding a coffee cup, a locked Ipad, an individual holding a locked Iphone and looking at a open laptop that includes a graph with every month on the e-axis and a bar in each month raising from left to right with bolded uppercase word (REPUTATION)" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="close up, birds view of confrence table including 6 individuals speaking, table includes words, (SHARE), (MEDIA), (LIKE)." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
