--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -25,9 +25,9 @@
                 </li>
             </ul>
         </nav>
-    </nav>
+    </header>
     <div class="hero"></div>
-    <div class="content">
+    <main class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="close up, bird view of working environment including coffee, open laptop, color pensils in a cup, a magnifying glass on bottom right of laptop, an open sharpie next to the opened spiral, open spiral with a couple titles including content, backlink, headings, link building, mobile campatibility, and social media. " class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -49,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </main>
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
